[project]
name = "toon"
version = "0.1.0"
description = "Local client for a rooted Eneco Toon thermostat"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    # paramiko 4+/5 dropped the SHA-1 host key & kex the Toon's old Dropbear
    # needs, so pin to the 3.x line for SSH access.
    "paramiko>=3,<4",
]

[project.optional-dependencies]
# scripts/screenshot.py renders the Toon framebuffer to PNG
screenshot = ["pillow>=10"]

[project.scripts]
toon = "toon.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["toon*"]
