[project]
name = "toon-remote"
version = "0.1.1"
description = "Local client and remote control for a rooted Eneco Toon thermostat"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    # paramiko 4+/5 dropped the SHA-1 host key & kex the Toon's old Dropbear
    # needs, so pin to the 3.x line for SSH access.
    "paramiko>=3,<4",
]

[project.optional-dependencies]
# screenshots and the remote-control GUI need Pillow (Tk ships with Python)
screenshot = ["pillow>=10"]
gui = ["pillow>=10"]

# The GUI owns the `toon-remote` command; the thermostat CLI stays `toon`
# (two entry points can't share one name).
[project.scripts]
toon = "toon_remote.cli:main"

[project.gui-scripts]
toon-remote = "toon_remote.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["toon_remote*"]
